--- a/views/admin/content_index.html
+++ b/views/admin/content_index.html
@@ -12,14 +12,22 @@
 <table class="table table-hover table-striped">
     <tr>
         <th>ID</th>
-        <th>内容名称</th>
+        <th>分类名称</th>
+        <th>标题</th>
+        <th>作者</th>
+        <th>添加时间</th>
+        <th>阅读数量</th>
         <th>操作</th>
     </tr>
 
     {% for content in contents %}
         <tr>
             <td>{{content._id.toString()}}</td>
+            <td>{{content.category.name}}</td>
             <td>{{content.title}}</td>
+            <td>{{content.user.username}}</td>
+            <td>{{content.addTime|date('Y年m月d日H时i分s秒',8 * -60)}}</td>
+            <td>{{content.views}}</td>
             <td>
                 <a href="/admin/content/edit?id={{content._id.toString()}}">修改</a> |
                 <a href="/admin/content/delete?id={{content._id.toString()}}">删除</a>
